# cashu-enclave-wallet

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-0b573cd1c5a4601c44888a9e458c477cc671132b6b0c56ef735aa1e55df12ca4.json  query-0e746ffb2a3e9598cd11cd2a2b219d265adfcb2764c61ac3f95587e432525f52.json  query-18fd47215284c111c4e41680972f510e7125c5d25d084828bdf224b0696cb9df.json  query-1b829c391156041975c5efd1803fab0beb0232e6d1c9437df98eddc938ba4169.json  query-24e8700e4e875c365f94efa633566026518664fcc458008d0492707ee7863e7f.json  query-25948bbfab797a02d576b746b2c7a975f8d4568c5c92685f2ba2a825b6e1380c.json  query-264f5e0372fc377b1b80987d66686738e2e09bb365fd6fcd04b314973a37227e.json  query-44ef8442c9f0ef6292e38e748327ace1cc7a24b92281588cc17d09c50c133f29.json  query-45d50e0a4f3923c37cd757c88d65fe544193060476f6a2415ce253be4d956670.json  query-4f2c0731c17d88b716e89ac0e7efe30b7f20aea48e298b58530063ac27522d12.json  query-52d6c1c89ce81713c9084b333b274dc473e219f4bff5e06d5a095c32b64ffe0c.json  query-53ea6b89d8391cca7cabfa88bfb75ea8561dabfa996098685b31906395403f51.json  query-540f709a0e16e4f8909e7fd0f1e9eea7aecb4dfc8949b4e5558d9525a02e4205.json  query-5c5fe451935c7d4e9c2cb0aa60d308bc9835f9a1cce6af13813d2ed1e1ffcd3f.json  query-5de28940aac987d8ea79745349bcf3affdc237ef402dd3bf585f8a1d2ebafec8.json  query-657eb7f007b783db405b5726306d500bb856c356462a63b88180a6ba52659f81.json  query-7767a802efed18d4324b40bbfcfa50812474605d61e9c04bdbcdc2e863569671.json  query-7c50b12fa50365011c815e83fa4ca7d410d8a5bf6addecd2c0a9fc726bba8d1c.json  query-7f6ade3f1f4e88227a2520960b7fa18d7b1c767234ff22467e7d9d4e9fc37e05.json  query-989b5c88824a290936d88db784dbd6a8affc6881fa5dcef0ed7717adc01c0700.json  query-a2dea897f827e6669f15d971d4bbba3dc0d5caaa7b2681621c47b780ad940547.json  query-a4803ec8d21ceb1fcc43271bfe07e5566e139aa0cb61968e87d8aec3996c4d04.json  query-a6ae3ef5bda7ad59cf6de79feef84b054ad2bd1913ea9a24cfbd522a8891aa0c.json  query-aa64abf717b2f52e39aa1a0a080c20e3f7d43e046fd75b0cfb617551c6d2af15.json  query-b2310fc119f9231fc82fc30c0bf48e2c537155c80bbd1cd8e1fabbf3f507f4d0.json  query-c73d57e4d4dd66e73f6a014f59e12dbb28d0efeba333b03b386c77eb9ce1591b.json  query-d383b362bb890ddc8bef5ef818bf5e8c757c2bd63bafa59b2ee3fdd7375f7808.json  query-d42ab64b06f2f592e27b593c3da5ac50fb70f1bc42560bc220dcd52d34107ca4.json  query-e9418b5e82dc716f3271812899481d2b3f32c8651a3d3bea7f71e62c2d966d6c.json  query-eaf5e9b0432dfe5182018894c739a78d2964119048957202d84a6dd1950bdce8.json  query-eb9d9d3fbb8b6b86395e18d17a0442acf752dbc0777d1c73797b99cd41f34a4a.json  query-f023e41835c8bc38448727b803768eafdc6197985fdfd97818807528492b9863.json  query-f69d378dc67077fdaaa1212c2804962061bba0d2bcd79787fe37949aae78f77b.json  query-f90d2ccc08eac58180507c45b59c254bd3c67f1d27fb0811fb125828df0f5224.json
cli/: Cargo.toml
cli/src/: client.rs  credentials.rs  crypto.rs  main.rs  session.rs
cli/src/commands/: attestation.rs  mod.rs  wallet.rs
keycloak/: cashu-realm.json  init-realm.sh
migrations/: 001_initial_schema.sql
proto/: Cargo.toml  build.rs
proto/proto/: enclave.proto
proto/src/: lib.rs
proxy/: Cargo.toml  Dockerfile
proxy/src/: client.rs  lib.rs  main.rs  tcp_proxy.rs
proxy/src/api/: handlers.rs  mod.rs  routes.rs
proxy/src/grpc/: mod.rs  service.rs
proxy/src/network_proxy/: mod.rs  server.rs
proxy/src/unix/: client.rs
proxy/src/vsock/: client.rs  mod.rs
scripts/: keycloak-auth.sh  refresh-token.sh
wallet/: Cargo.toml  Dockerfile
wallet/src/: attestation.rs  error.rs  main.rs  types.rs  wallet_manager.rs
wallet/src/crypto/: encryption.rs  jwks.rs  jwt.rs  kms.rs  mod.rs  seed.rs  session.rs
wallet/src/database/: encrypted_db.rs  mod.rs
wallet/src/network/: mod.rs  unix_server.rs  vsock_server.rs
wallet/src/network_proxy/: client.rs  http_connect.rs  local_server.rs  mod.rs
wallet/src/vsock_http/: mod.rs  transport.rs
