[package]
name = "proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "proxy"
path = "src/main.rs"

[features]
default = ["vsock"]
vsock = ["dep:tokio-vsock"]
local-dev = []

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Proto definitions
proto = { path = "../proto" }

# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
tonic-health = "0.12"

# Vsock
tokio-vsock = { version = "0.7", optional = true }

# HTTP Proxy
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"

# Utilities
base64 = "0.22"
